Improvements and updated to java25 as default
- Remove stale containers before setup so reruns don't fail
  with 'container name already in use'
- Add :z to bind mounts so containers can read the otel config
  and DB init scripts under SELinux enforcing
- Harden cleanup rm -f with ignore-exit-code and name fallback
- Fix PID capture when the container runtime prints notices
- Default jvm mode to java25-latest images
- Correct --java-version docs and warn when ignored
- Add generic jdk26.build mode for custom JDK images
- Raise default service memory from 1G to 2G
- Propagate profiling MAX/AVG results to RUN state

Port Diego's otel fixes: log capture, protocol, jaeger leg, tuning

Co-authored-by: Diego Lovison <diegolovison@gmail.com>